Divisao do arquivo global em 2 arquivos. Um para execucao generica, e outro para a execucao java